--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -8,19 +8,27 @@
     <TextView
         android:id="@+id/tvBienvenido"
         android:text="Bienvenido, ..."
-        android:textSize="22sp"
         android:textStyle="bold"
-        android:layout_marginBottom="16dp"
+        android:textSize="22sp"
         android:layout_width="wrap_content"
-        android:layout_height="wrap_content"/>
+        android:layout_height="wrap_content"
+        android:layout_marginBottom="16dp"/>
+
+    <TextView
+        android:id="@+id/tvPasosHoy"
+        android:text="Pasos hoy: 0"
+        android:textSize="20sp"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginBottom="10dp"/>
 
     <TextView
         android:id="@+id/tvKmHoy"
         android:text="Kilómetros hoy: 0.00 km"
         android:textSize="18sp"
-        android:layout_marginBottom="8dp"
         android:layout_width="wrap_content"
-        android:layout_height="wrap_content"/>
+        android:layout_height="wrap_content"
+        android:layout_marginBottom="8dp"/>
 
     <TextView
         android:id="@+id/tvKmSemana"
@@ -28,13 +36,5 @@
         android:textSize="18sp"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"/>
-
-    <TextView
-        android:id="@+id/tvPasosHoy"
-        android:text="Pasos hoy: 0"
-        android:textSize="18sp"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="12dp"/>
 
 </LinearLayout>
