--- a/app/src/main/res/layout/fragment_stats.xml
+++ b/app/src/main/res/layout/fragment_stats.xml
@@ -7,7 +7,6 @@
     android:background="#80000000"
     android:padding="20dp">
 
-    <!-- Ventana modal centrada (más pequeña) -->
     <androidx.cardview.widget.CardView
         android:id="@+id/cardModal"
         android:layout_width="match_parent"
@@ -198,7 +197,7 @@
                             android:paddingTop="6dp"/>
                     </LinearLayout>
 
-                    <!-- Mejor posición mensual -->
+                    <!-- Mejor posición (1 = mejor) -->
                     <LinearLayout
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
@@ -208,7 +207,7 @@
                         android:clipToOutline="true">
 
                         <TextView
-                            android:text="Mejor posición mensual"
+                            android:text="Mejor posición"
                             android:layout_width="match_parent"
                             android:layout_height="wrap_content"
                             android:textStyle="bold"
@@ -224,7 +223,7 @@
                             android:paddingTop="6dp"/>
                     </LinearLayout>
 
-                    <!-- Metas diarias completadas -->
+                    <!-- Metas diarias completadas (total) -->
                     <LinearLayout
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
@@ -250,7 +249,7 @@
                             android:paddingTop="6dp"/>
                     </LinearLayout>
 
-                    <!-- Metas semanales completadas -->
+                    <!-- Metas semanales completadas (total) -->
                     <LinearLayout
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
